--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -56,7 +56,7 @@ nav .left {
 }
 
 .navM input::placeholder {
-    font-size: 14px;
+    font-size: var(--p3-Paragraph);
     font-weight: 400;
     color: var(--text-color);
 }
@@ -72,7 +72,7 @@ nav .left {
 .watchlistDiv p {
     white-space: nowrap;
     cursor: pointer;
-    font-size: 15px;
+    font-size: var(--p4-Paragraph);
     margin: 0;
 }
 
@@ -204,7 +204,6 @@ nav .left {
 
 .subHeader .container::before {
     background: linear-gradient( to right , #282829 0% , #28282900 100%);
-    /* background: red; */
     left: 0%;
     z-index: 1;
 }
@@ -229,7 +228,7 @@ nav .left {
 
 
 .subHeader .container .Categorybtns span {
-    font-size: 13px;
+    font-size: var(--p4-Paragraph);
     font-weight: 500;
 }
 
