--- a/client/src/components/buttons/Button.css
+++ b/client/src/components/buttons/Button.css
@@ -1,8 +1,8 @@
 .mainbtn {
     background-color: #BACC4A;
     color: var(--black-color);
-    padding: 0px 37px;
-    width: fit-content !important;
+    padding: 13px 20px 13px 20px ;
+    min-width: 187px !important;
     border-radius: 70px;
     height: 46px;
     cursor: pointer;
@@ -12,10 +12,10 @@
 }
 
 .mainbtn p {
-    font-size:16px ;
+    font-size: var(--p2-Paragraph);
     /* font-size: var(--p1-Paragraph); */
     font-family: 'Helvetica Neue', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 0;
 }
 
@@ -28,8 +28,8 @@
 
 .mainbtnSec {
     background-color: transparent;
-    padding: 0px 37px;
-    width: fit-content !important;
+    padding: 13px 20px 13px 20px ;
+    min-width: 187px !important;
     border-radius: 70px;
     height: 46px;
     cursor: pointer;
@@ -46,10 +46,10 @@
 }
 
 .mainbtnSec p {
-    font-size: 16px;
+    font-size: var(--p2-Paragraph);
     color: var(--decorate-color);
     font-family: 'Helvetica Neue', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     margin-bottom: 0;
 }
 
