--- a/client/src/components/Top-Movies-Suggestions/movieSlider.css
+++ b/client/src/components/Top-Movies-Suggestions/movieSlider.css
@@ -24,17 +24,18 @@
     left: 0% !important;
     top: 50%;
 }
+
 .MovieCards .react-multiple-carousel__arrow--right {
     transform: translate(0, -0%) !important;
     right: 0% !important;
-    top: 35% !important;
+    top: 40% !important;
 }
 
 .MovieCards .react-multiple-carousel__arrow--left {
     position: absolute;
     transform: translate(0, -0%) !important;
     left: 0% !important;
-    top: 35% !important;
+    top: 40% !important;
 }
 
 .react-multiple-carousel__arrow {
@@ -42,8 +43,37 @@
 }
 
 
+.MovieCards::after,
+.MovieCards::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100px;
+    pointer-events: none;
+}
+
+.MovieCards::before {
+    background: linear-gradient(to left, rgba(18, 18, 18, 0) 0%, #111111 49.5%);
+    left: -4%;
+    z-index: 1;
+}
+
+.MovieCards::after {
+    background: linear-gradient(to right, rgba(18, 18, 18, 0) 0%, #111111 49.5%);
+    right: -4%;
+}
+
+
 @media screen and (max-width:428px) {
-    .MovieCards{
+    .MovieCards {
         padding-top: 0rem;
+    }
+
+    .MovieCards::before {
+        display: none;
+    }
+    
+    .MovieCards::after {
+        display: none;
     }
 }
