--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -72,7 +72,7 @@ nav .left {
 .watchlistDiv p {
     white-space: nowrap;
     cursor: pointer;
-    font-size: var(--p4-Paragraph);
+    font-size: var(--p3-Paragraph);
     margin: 0;
 }
 
@@ -203,13 +203,13 @@ nav .left {
 }
 
 .subHeader .container::before {
-    background: linear-gradient( to right , #282829 0% , #28282900 100%);
+    background: linear-gradient(to right, #282829 0%, #28282900 100%);
     left: 0%;
     z-index: 1;
 }
 
 .subHeader .container::after {
-    background: linear-gradient(to left , #282829 0% , #28282900 100% );
+    background: linear-gradient(to left, #282829 0%, #28282900 100%);
     right: 0;
 }
 
@@ -217,13 +217,13 @@ nav .left {
     border-radius: 70px;
     background: #FFFFFF1A;
     border: none;
-    height: 46px;
+    height: 36px;
     padding: 0rem 20px;
 }
 
 .subHeader .container .at {
-  background: var(--decorate-color);
-  color:var(--black-color);
+    background: var(--decorate-color);
+    color: var(--black-color);
 }
 
 
@@ -235,6 +235,7 @@ nav .left {
 .subHeader .container .Categorybtns:hover {
     background: #FFFFFF4D !important;
 }
+
 .subHeader .container .at:hover {
     background: #E7F973 !important;
 }
@@ -265,38 +266,6 @@ nav .left {
 
 @media screen and (max-width: 1860px) and (min-width: 1280px) {
 
-    /* .navM {
-        justify-content: center !important;
-    }
-
-    .navM form {
-        padding: .3rem;
-        position: relative;
-        border: 1.5px solid #c2bebe5a;
-        color: var(--text-color);
-        outline: none;
-        border-radius: 10px;
-        background-color: #0e0e1038;
-        width: 450px;
-    }
-
-    .navM form svg {
-        position: static !important;
-        font-size: 25px;
-        left: 5%;
-        cursor: pointer;
-        margin: 0rem 1rem;
-    }
-
-    .navM input {
-        position: static !important;
-        width: 100%;
-        margin: 0 !important;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 18px;
-        color: var(--text-color);
-    } */
     nav {
         gap: 5rem;
     }
@@ -328,8 +297,25 @@ nav .left {
         width: 100vw;
     }
 
+
     .navM {
-        display: none;
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+
+    .navM form {
+        display: none !important;
+    }
+
+
+    .watchlistDiv {
+        display: none !important;
+
+    }
+
+    .watchlistDiv img {
+        display: none !important;
     }
 
     nav .left {
@@ -378,6 +364,18 @@ nav .left {
         font-size: 1rem;
         width: fit-content !important;
         margin-right: 1rem;
+    }
+
+    .subHeader .container::before {
+        display: none;
+    }
+
+    .subHeader .container::after {
+        display: none;
+    }
+
+    .subHeader .react-multi-carousel-track {
+        margin: 0 !important;
     }
 
 }
